--- a/style.css
+++ b/style.css
@@ -105,8 +105,9 @@ img {
 
 .images {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   grid-column-gap: 30px;
+  grid-row-gap: 45px;
 }
 
 .footer {
